Search overlap fixed

--- a/src/assets/styles/icons.css
+++ b/src/assets/styles/icons.css
@@ -16,6 +16,7 @@
   float: left;
   position: sticky;
   top: 20px; /* the offset */
+  z-index: 1;
 }
 .icons-filter {
   padding: 10px 10px;
@@ -79,7 +80,7 @@
   position: absolute;
   cursor: pointer;
   visibility: hidden;
-  top: 10px;
+  bottom: 8px;
   opacity: 0;
   transition: opacity 0.7s;
 }
